Landing fix for bug 261108. Using <enter> to submit a form triggers Warning reference to undefined property event.button''. Patch by neil.parkwaycc.co.uk@myrealbox.com, r+sr=jst@mozilla.org, a=brendan@mozilla.org